{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 243,
  "lineage": "4682bac4-60eb-3ab7-c693-1b1d6ed04103",
  "resources": [
    {
      "module": "module.aws1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05210ba6bdf75db36",
            "arn": "arn:aws:ec2:eu-central-1:594826232704:instance/i-0dea772d96980df32",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dea772d96980df32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "aws1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083e719f89353d657",
            "private_dns": "ip-10-0-2-43.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.43",
            "public_dns": "ec2-52-28-101-104.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.28.101.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a666f5b1b27d1e78",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6fdda547a33e899",
            "tags": {
              "Name": "aws1-srv"
            },
            "tags_all": {
              "Name": "aws1-srv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07e7144fcbd25f6f7"
            ]
          },
          "dependencies": [
            "module.aws1.aws_key_pair.key",
            "module.aws1.aws_security_group.sg",
            "module.aws1.data.aws_ami.ubuntu",
            "module.spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:594826232704:security-group/sg-07e7144fcbd25f6f7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e7144fcbd25f6f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "aws1-sg",
            "name_prefix": "",
            "owner_id": "594826232704",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fd49149d71578bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05210ba6bdf75db36",
            "arn": "arn:aws:ec2:eu-central-1:594826232704:instance/i-095881756263643d3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095881756263643d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "aws2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033b6793639fe6ed1",
            "private_dns": "ip-10-0-2-54.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.54",
            "public_dns": "ec2-18-197-145-143.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.145.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c9633a6ecde8e18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072189018443a0804",
            "tags": {
              "Name": "aws2-srv"
            },
            "tags_all": {
              "Name": "aws2-srv"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e46da2e02a8a3136"
            ]
          },
          "dependencies": [
            "module.aws2.aws_key_pair.key",
            "module.aws2.aws_security_group.sg",
            "module.aws2.data.aws_ami.ubuntu",
            "module.spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:594826232704:security-group/sg-0e46da2e02a8a3136",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e46da2e02a8a3136",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "aws2-sg",
            "name_prefix": "",
            "owner_id": "594826232704",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fd49149d71578bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkInterfaces/azure-srv1-nic",
            "internal_domain_name_suffix": "xjmzlbe3rlgutpttphkgocjuxc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azure-srv1-nic",
                "primary": true,
                "private_ip_address": "10.100.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/publicIPAddresses/azure-srv1-pub_ip",
                "subnet_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/virtualNetworks/azure-spoke1/subnets/azure-spoke1-Public-gateway-subnet-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-26-23-54",
            "name": "azure-srv1-nic",
            "private_ip_address": "10.100.2.4",
            "private_ip_addresses": [
              "10.100.2.4"
            ],
            "resource_group_name": "rg-av-azure-spoke1-717829",
            "virtual_machine_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Compute/virtualMachines/azure-srv1-srv"
          },
          "dependencies": [
            "module.azure1.azurerm_public_ip.default",
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure1",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkInterfaces/azure-srv1-nic|/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkSecurityGroups/azure-srv1-nsg",
            "network_interface_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkInterfaces/azure-srv1-nic",
            "network_security_group_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkSecurityGroups/azure-srv1-nsg"
          },
          "dependencies": [
            "module.azure1.azurerm_network_interface.default",
            "module.azure1.azurerm_network_security_group.default",
            "module.azure1.azurerm_public_ip.default",
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure1",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkSecurityGroups/azure-srv1-nsg",
            "location": "westeurope",
            "name": "azure-srv1-nsg",
            "resource_group_name": "rg-av-azure-spoke1-717829",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICMP",
                "priority": 1008,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1007,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "3389",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rfc1918a",
                "priority": 1009,
                "protocol": "*",
                "source_address_prefix": "10.0.0.0/8",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rfc1918b",
                "priority": 1010,
                "protocol": "*",
                "source_address_prefix": "172.16.0.0/12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rfc1918c",
                "priority": 1011,
                "protocol": "*",
                "source_address_prefix": "192.168.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound",
                "priority": 1013,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1006,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure1",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/publicIPAddresses/azure-srv1-pub_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.16.153.7",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "azure-srv1-pub_ip",
            "resource_group_name": "rg-av-azure-spoke1-717829",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkInterfaces/azure-srv2-nic",
            "internal_domain_name_suffix": "xjmzlbe3rlgutpttphkgocjuxc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azure-srv2-nic",
                "primary": true,
                "private_ip_address": "10.100.2.20",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/publicIPAddresses/azure-srv2-pub_ip",
                "subnet_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/virtualNetworks/azure-spoke1/subnets/azure-spoke1-Public-subnet-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2E-18-AB",
            "name": "azure-srv2-nic",
            "private_ip_address": "10.100.2.20",
            "private_ip_addresses": [
              "10.100.2.20"
            ],
            "resource_group_name": "rg-av-azure-spoke1-717829",
            "virtual_machine_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Compute/virtualMachines/azure-srv2-srv"
          },
          "dependencies": [
            "module.azure2.azurerm_public_ip.default",
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure2",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkInterfaces/azure-srv2-nic|/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkSecurityGroups/azure-srv2-nsg",
            "network_interface_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkInterfaces/azure-srv2-nic",
            "network_security_group_id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkSecurityGroups/azure-srv2-nsg"
          },
          "dependencies": [
            "module.azure2.azurerm_network_interface.default",
            "module.azure2.azurerm_network_security_group.default",
            "module.azure2.azurerm_public_ip.default",
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure2",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/networkSecurityGroups/azure-srv2-nsg",
            "location": "westeurope",
            "name": "azure-srv2-nsg",
            "resource_group_name": "rg-av-azure-spoke1-717829",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ICMP",
                "priority": 1008,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1007,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "3389",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rfc1918a",
                "priority": 1009,
                "protocol": "*",
                "source_address_prefix": "10.0.0.0/8",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rfc1918b",
                "priority": 1010,
                "protocol": "*",
                "source_address_prefix": "172.16.0.0/12",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rfc1918c",
                "priority": 1011,
                "protocol": "*",
                "source_address_prefix": "192.168.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound",
                "priority": 1013,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1006,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.azure2",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a7acba80-b5bc-4094-9cf7-f2f0a882c686/resourceGroups/rg-av-azure-spoke1-717829/providers/Microsoft.Network/publicIPAddresses/azure-srv2-pub_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.16.153.14",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "azure-srv2-pub_ip",
            "resource_group_name": "rg-av-azure-spoke1-717829",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.azure_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.gcp1",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.159.217.224",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-08-19T01:42:58.642-07:00",
            "id": "projects/freyviatrix-2020/regions/europe-west3/addresses/gcp-srv1-ip",
            "name": "gcp-srv1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "freyviatrix-2020",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/regions/europe-west3/addresses/gcp-srv1-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/zones/europe-west3-a/instances/gcp-srv1-srv"
            ]
          }
        }
      ]
    },
    {
      "module": "module.gcp1",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-08-19T01:43:57.695-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/freyviatrix-2020/global/firewalls/allow-all-gcp-srv1",
            "log_config": [],
            "name": "allow-all-gcp-srv1",
            "network": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/global/networks/gcp-spoke1",
            "priority": 1000,
            "project": "freyviatrix-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/global/firewalls/allow-all-gcp-srv1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gcp_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.gcp1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220810",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/zones/europe-west3-a/disks/gcp-srv1-srv"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/freyviatrix-2020/zones/europe-west3-a/instances/gcp-srv1-srv",
            "instance_id": "7023042818051601312",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highcpu-8",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCnNDeCuEOgJjtFFzWa9fXyKj8mSdCnCVR+iOm40JYSO4/kKEOflq0VvtIcnezv1wa4Ghj3RqEcFd9857qAQfqsn5KgjwuoYG37eTthz9waKSbem6l8hilR4CncagBqMqje8EDuWFdyNPWmgM04nHJ+HRn0UoXzYikSbbQJ082XORREEpZA4Rt7ZHtIncqN5EMBPQ4lflDOR7l0pCTcGObHNPOuWje35ZQqcjryskUkgvEzx+kFxnJ5fG2cwvDkoq8JrCwXhZNmoYNvR6cAtzMo7S/v7THxCxYMgsSUWRzY1+Pi93EB/CIZp5le0gewblrzXpc8DmHd5NPi3ObPwPTh dennis@NUC"
            },
            "metadata_fingerprint": "RV2o_XN78No=",
            "metadata_startup_script": "#!/bin/bash\n\napt-get update\napt-get -y install build-essential  \napt-get -y install git\n\ngit clone https://github.com/Microsoft/ntttcp-for-linux\ncd ntttcp-for-linux/src\nmake \u0026\u0026 make install\n\nHOME=\"/home/ubuntu\"\n\necho \"#!/bin/bash\" \u003e $HOME/client1\necho \"ntttcp -s -m 15,*,int1.avxlab.de -V -L\" \u003e\u003e $HOME/client1\nchmod +x $HOME/client1\n\necho \"#!/bin/bash\" \u003e $HOME/client2\necho \"ntttcp -s -m 15,*,int5.avxlab [...]
            "name": "gcp-srv1-srv",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.217.224",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/global/networks/gcp-spoke1",
                "network_ip": "10.50.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/regions/europe-west3/subnetworks/gcp-spoke1",
                "subnetwork_project": "freyviatrix-2020"
              }
            ],
            "project": "freyviatrix-2020",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/zones/europe-west3-a/instances/gcp-srv1-srv",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh-gcp-srv1"
            ],
            "tags_fingerprint": "a-HLR681rd0=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.gcp1.google_compute_address.default",
            "module.gcp_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.gcp2",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.159.128.33",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-08-19T01:42:59.146-07:00",
            "id": "projects/freyviatrix-2020/regions/europe-west3/addresses/gcp-srv2-ip",
            "name": "gcp-srv2-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "freyviatrix-2020",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/regions/europe-west3/addresses/gcp-srv2-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/zones/europe-west3-b/instances/gcp-srv2-srv"
            ]
          }
        }
      ]
    },
    {
      "module": "module.gcp2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-08-19T01:43:57.596-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/freyviatrix-2020/global/firewalls/allow-all-gcp-srv2",
            "log_config": [],
            "name": "allow-all-gcp-srv2",
            "network": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/global/networks/gcp-spoke1",
            "priority": 1000,
            "project": "freyviatrix-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/global/firewalls/allow-all-gcp-srv2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gcp_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.gcp2",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220810",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/zones/europe-west3-b/disks/gcp-srv2-srv"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/freyviatrix-2020/zones/europe-west3-b/instances/gcp-srv2-srv",
            "instance_id": "1692340327510373281",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highcpu-8",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCnNDeCuEOgJjtFFzWa9fXyKj8mSdCnCVR+iOm40JYSO4/kKEOflq0VvtIcnezv1wa4Ghj3RqEcFd9857qAQfqsn5KgjwuoYG37eTthz9waKSbem6l8hilR4CncagBqMqje8EDuWFdyNPWmgM04nHJ+HRn0UoXzYikSbbQJ082XORREEpZA4Rt7ZHtIncqN5EMBPQ4lflDOR7l0pCTcGObHNPOuWje35ZQqcjryskUkgvEzx+kFxnJ5fG2cwvDkoq8JrCwXhZNmoYNvR6cAtzMo7S/v7THxCxYMgsSUWRzY1+Pi93EB/CIZp5le0gewblrzXpc8DmHd5NPi3ObPwPTh dennis@NUC"
            },
            "metadata_fingerprint": "FUZKYEjU8aA=",
            "metadata_startup_script": "#!/bin/bash\n\napt-get update\napt-get -y install build-essential  \napt-get -y install git\n\ngit clone https://github.com/Microsoft/ntttcp-for-linux\ncd ntttcp-for-linux/src\nmake \u0026\u0026 make install\n\nHOME=\"/home/ubuntu\"\n\necho \"#!/bin/bash\" \u003e $HOME/client1\necho \"ntttcp -s -m 15,*,int2.avxlab.de -V -L\" \u003e\u003e $HOME/client1\nchmod +x $HOME/client1\n\necho \"#!/bin/bash\" \u003e $HOME/client2\necho \"ntttcp -s -m 15,*,int6.avxlab [...]
            "name": "gcp-srv2-srv",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.128.33",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/global/networks/gcp-spoke1",
                "network_ip": "10.50.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/regions/europe-west3/subnetworks/gcp-spoke1",
                "subnetwork_project": "freyviatrix-2020"
              }
            ],
            "project": "freyviatrix-2020",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/freyviatrix-2020/zones/europe-west3-b/instances/gcp-srv2-srv",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh-gcp-srv2"
            ],
            "tags_fingerprint": "1FrES7UNsuc=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.gcp2.google_compute_address.default",
            "module.gcp_spoke1.aviatrix_vpc.default"
          ]
        }
      ]
    }
  ]
}